--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.casinoName{
+    display: flex;
+    justify-content:space-between
+
+}
 body {
     background: url("/Assets/PokerBackgroundCropped.jpg");
     background-color: #cccccc;
@@ -44,26 +49,29 @@ ul {
     grid-row: 2;
 }
 #bettingAmounts{
-    max-width: 5px;
-    max-height: 5px;       
-}
-.casinoName{
     display: flex;
-    justify-content:space-between
-
+    flex-direction: row;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    justify-content: center;
 }
+
 
 button>img{
     width: 25px;
     height: 25px;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
     /* border-radius: 100%; */
 }
 #bettingAmounts button{
     border-radius: 100%;
     padding:  0px 0px;
-overflow: hidden;
-align-items: center;
-
+    overflow: hidden;
+    align-items: center;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
 }
 
 /* span {
