--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 }
 body {
-    background: url("/Assets/PokerBackgroundCropped.jpg");
+    background: url("./Assets/PokerBackgroundCropped.jpg");
     background-color: #cccccc;
     size: 100%;
     background-repeat: repeat;
@@ -13,7 +13,7 @@ body {
 
 
 div{
-    border: solid 5px red ; 
+    border: solid 0px red ; 
 }
 
 ul {
@@ -22,11 +22,16 @@ ul {
 
 #container{
     display: grid;
-    height: 500px;
+    height: 650px;
     place-items: center;
 }
 #mid{
     display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    justify-content: center;
+    flex-direction: column;
     grid-column: 2;
     grid-row: 1;
     
