Made folders for better organizing

--- a/style.css
+++ b/style.css
@@ -87,8 +87,9 @@ button>img{
     padding:  0px 0px;
     overflow: hidden;
     align-items: center;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
+    padding: 0 2 0 0;
+    margin: 0 2 0 0;
+    justify-content: center;
 }
 
 #winner{
